* convertted books to swagger
